--- a/yarogono/studyCode/build.gradle
+++ b/yarogono/studyCode/build.gradle
@@ -14,6 +14,12 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+
+
+    // JMH
+    implementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.35'
+    testImplementation group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.35'
+
 }
 
 test {
