--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .idea
 *.vsidx
 lLcrowe/.vs/TILStudy/FileContentIndex/7a5d109b-d355-49c5-ae72-6a0867193ac5.vsidx
+lLcrowe/.vs/TILStudy/FileContentIndex/7a5d109b-d355-49c5-ae72-6a0867193ac5.vsidx
