--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.vsidx
 lLcrowe/.vs/TILStudy/FileContentIndex/7a5d109b-d355-49c5-ae72-6a0867193ac5.vsidx
 lLcrowe/.vs/TILStudy/FileContentIndex/7a5d109b-d355-49c5-ae72-6a0867193ac5.vsidx
+lLcrowe/.vs/TILStudy/FileContentIndex/7a5d109b-d355-49c5-ae72-6a0867193ac5.vsidx
